feat(product): implement product service with purchase functionality